--- a/ionic/CodeOrder/www/index.html
+++ b/ionic/CodeOrder/www/index.html
@@ -14,6 +14,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.min.js"></script>
+    <script src="lib/query-string/query-string.js"></script>
+    <script src="lib/angular-oauth2/dist/angular-oauth2.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
